--- a/.github/workflows/check-release.yml
+++ b/.github/workflows/check-release.yml
@@ -24,7 +24,7 @@ jobs:
           SIGN_KEY: ${{ secrets.SIGN_KEY }}
           SIGN_KEY_PASS: ${{ secrets.SIGN_KEY_PASS }}
         run: |
-          ./mvnw --batch-mode -s .mvn/ci_settings.xml -ntp -DskipTests -DskipPublishing -Prun-its,release
+          ./mvnw --batch-mode -s .mvn/ci_settings.xml -ntp -DskipTests -DskipPublishing -Dinvoker.streamLogsOnFailures -Prun-its,release
           ./mvnw license:check-file-header -Dlicense.failOnMissingHeader=true -Pprepare-and-check
       - name: Logs for integration tests
         uses: actions/upload-artifact@v4
