--- a/tinylog-provider/pom.xml
+++ b/tinylog-provider/pom.xml
@@ -116,6 +116,11 @@
         <plugins>
           <plugin>
             <artifactId>maven-invoker-plugin</artifactId>
+            <configuration>
+              <properties>
+                <tinylog.version>${tinylog.version}</tinylog.version>
+              </properties>
+            </configuration>
             <groupId>org.apache.maven.plugins</groupId>
           </plugin>
         </plugins>
