--- a/tinylog-provider/src/it/hello-tinylog-world/pom.xml
+++ b/tinylog-provider/src/it/hello-tinylog-world/pom.xml
@@ -66,7 +66,7 @@
     <dependency>
       <artifactId>tinylog-api</artifactId>
       <groupId>org.tinylog</groupId>
-      <version>2.7.0</version>
+      <version>${tinylog.version}</version>
     </dependency>
   </dependencies>
   <dependencyManagement>
@@ -84,9 +84,6 @@
   <groupId>example.hello</groupId>
   <modelVersion>4.0.0</modelVersion>
   <properties>
-    <java.version>11</java.version>
-    <junit.version>5.11.4</junit.version>
-    <mockito.version>5.15.2</mockito.version>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
   </properties>
   <version>1.0.0</version>
