--- a/.github/workflows/codacy.yml
+++ b/.github/workflows/codacy.yml
@@ -8,6 +8,7 @@ on:
   pull_request:
     # The branches below must be a subset of the branches above
     branches: [ "**" ]
+  workflow_dispatch:
 
 permissions: read-all
 
