--- a/pom.xml
+++ b/pom.xml
@@ -556,5 +556,5 @@
     <url>https://github.com/vitalijr2/mock-loggers</url>
   </scm>
   <url>https://github.com/vitalijr2/mock-loggers</url>
-  <version>1.2.3</version>
+  <version>1.2.4-SNAPSHOT</version>
 </project>
