--- a/commons-logging/src/it/hello-commons-logging-world/pom.xml
+++ b/commons-logging/src/it/hello-commons-logging-world/pom.xml
@@ -36,7 +36,7 @@
     <dependency>
       <artifactId>commons-logging</artifactId>
       <groupId>commons-logging</groupId>
-      <version>1.3.5</version>
+      <version>${commons-logging.version}</version>
     </dependency>
     <dependency>
       <artifactId>hamcrest</artifactId>
