--- a/elf4j/pom.xml
+++ b/elf4j/pom.xml
@@ -14,6 +14,15 @@
         <groupId>org.apache.maven.plugins</groupId>
       </plugin>
       <plugin>
+        <artifactId>maven-invoker-plugin</artifactId>
+        <configuration>
+          <properties>
+            <elf4j.version>${elf4j.version}</elf4j.version>
+          </properties>
+        </configuration>
+        <groupId>org.apache.maven.plugins</groupId>
+      </plugin>
+      <plugin>
         <artifactId>maven-jar-plugin</artifactId>
         <configuration>
           <archive>
