--- a/elf4j/src/it/hello-elf4j-world/pom.xml
+++ b/elf4j/src/it/hello-elf4j-world/pom.xml
@@ -23,22 +23,15 @@
     </plugins>
   </build>
   <dependencies>
-    <!--
     <dependency>
       <artifactId>@project.artifactId@</artifactId>
       <groupId>@project.groupId@</groupId>
       <scope>test</scope>
     </dependency>
-    -->
-    <dependency>
-      <artifactId>mock-loggers-elf4j</artifactId>
-      <groupId>io.github.vitalijr2.logging</groupId>
-      <scope>test</scope>
-    </dependency>
     <dependency>
       <artifactId>elf4j</artifactId>
       <groupId>io.github.elf4j</groupId>
-      <version>4.1.0</version>
+      <version>${elf4j.version}</version>
     </dependency>
     <dependency>
       <artifactId>hamcrest</artifactId>
@@ -86,9 +79,6 @@
   <groupId>example.hello</groupId>
   <modelVersion>4.0.0</modelVersion>
   <properties>
-    <java.version>11</java.version>
-    <junit.version>5.12.2</junit.version>
-    <mockito.version>5.17.0</mockito.version>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
   </properties>
   <version>1.0.0</version>
