--- a/slf4j/src/it/hello-slf4j-world/pom.xml
+++ b/slf4j/src/it/hello-slf4j-world/pom.xml
@@ -66,7 +66,7 @@
     <dependency>
       <artifactId>slf4j-api</artifactId>
       <groupId>org.slf4j</groupId>
-      <version>2.0.16</version>
+      <version>${slf4j.version}</version>
     </dependency>
   </dependencies>
   <dependencyManagement>
