--- a/.mvn/maven.config
+++ b/.mvn/maven.config
@@ -1,7 +1,11 @@
+--batch-mode
+--errors
 --fail-at-end
 --show-version
+--no-transfer-progress
 -Djava.awt.headless=true
 -DinstallAtEnd=true
 -DdeployAtEnd=true
 -Dhttps.protocols=TLSv1.2
 -Dorg.slf4j.simpleLogger.log.org.apache.maven.cli.transfer.Slf4jMavenTransferListener=WARN
+-Dstyle.color=always
