--- a/jdk-platform-logging/pom.xml
+++ b/jdk-platform-logging/pom.xml
@@ -50,7 +50,7 @@
     <dependency>
       <artifactId>mock-loggers-core</artifactId>
       <groupId>io.github.vitalijr2.logging</groupId>
-      <version>1.2.5-SNAPSHOT</version>
+      <version>1.2.5</version>
     </dependency>
     <dependency>
       <artifactId>mockito-core</artifactId>
@@ -64,7 +64,7 @@
   <parent>
     <artifactId>mock-loggers</artifactId>
     <groupId>io.github.vitalijr2.logging</groupId>
-    <version>1.2.5-SNAPSHOT</version>
+    <version>1.2.5</version>
   </parent>
   <profiles>
     <profile>
@@ -93,5 +93,5 @@
       <id>run-its</id>
     </profile>
   </profiles>
-  <version>1.2.5-SNAPSHOT</version>
+  <version>1.2.5</version>
 </project>
