--- a/commons-logging/pom.xml
+++ b/commons-logging/pom.xml
@@ -14,6 +14,15 @@
         <groupId>org.apache.maven.plugins</groupId>
       </plugin>
       <plugin>
+        <artifactId>maven-invoker-plugin</artifactId>
+        <configuration>
+          <properties>
+            <commons-logging.version>${commons-logging.version}</commons-logging.version>
+          </properties>
+        </configuration>
+        <groupId>org.apache.maven.plugins</groupId>
+      </plugin>
+      <plugin>
         <artifactId>maven-jar-plugin</artifactId>
         <configuration>
           <archive>
@@ -55,7 +64,7 @@
     <dependency>
       <artifactId>mock-loggers-core</artifactId>
       <groupId>io.github.vitalijr2.logging</groupId>
-      <version>1.2.4</version>
+      <version>1.2.5</version>
     </dependency>
     <dependency>
       <artifactId>mockito-core</artifactId>
@@ -69,7 +78,7 @@
   <parent>
     <artifactId>mock-loggers</artifactId>
     <groupId>io.github.vitalijr2.logging</groupId>
-    <version>1.2.4</version>
+    <version>1.2.5</version>
   </parent>
   <profiles>
     <profile>
@@ -117,5 +126,5 @@
   <properties>
     <commons-logging.version>1.3.5</commons-logging.version>
   </properties>
-  <version>1.2.4</version>
+  <version>1.2.5</version>
 </project>
