--- a/elf4j/pom.xml
+++ b/elf4j/pom.xml
@@ -14,6 +14,15 @@
         <groupId>org.apache.maven.plugins</groupId>
       </plugin>
       <plugin>
+        <artifactId>maven-invoker-plugin</artifactId>
+        <configuration>
+          <properties>
+            <elf4j.version>${elf4j.version}</elf4j.version>
+          </properties>
+        </configuration>
+        <groupId>org.apache.maven.plugins</groupId>
+      </plugin>
+      <plugin>
         <artifactId>maven-jar-plugin</artifactId>
         <configuration>
           <archive>
@@ -55,7 +64,7 @@
     <dependency>
       <artifactId>mock-loggers-core</artifactId>
       <groupId>io.github.vitalijr2.logging</groupId>
-      <version>1.2.4</version>
+      <version>1.2.5</version>
     </dependency>
     <dependency>
       <artifactId>mockito-core</artifactId>
@@ -73,7 +82,7 @@
   <parent>
     <artifactId>mock-loggers</artifactId>
     <groupId>io.github.vitalijr2.logging</groupId>
-    <version>1.2.4</version>
+    <version>1.2.5</version>
   </parent>
   <profiles>
     <profile>
@@ -119,7 +128,7 @@
     </profile>
   </profiles>
   <properties>
-    <elf4j.version>4.2.0</elf4j.version>
+    <elf4j.version>6.0.2</elf4j.version>
   </properties>
-  <version>1.2.4</version>
+  <version>1.2.5</version>
 </project>
