--- a/commons-logging/pom.xml
+++ b/commons-logging/pom.xml
@@ -116,6 +116,11 @@
         <plugins>
           <plugin>
             <artifactId>maven-invoker-plugin</artifactId>
+            <configuration>
+              <properties>
+                <commons-logging.version>${commons-logging.version}</commons-logging.version>
+              </properties>
+            </configuration>
             <groupId>org.apache.maven.plugins</groupId>
           </plugin>
         </plugins>
