--- a/slf4j/pom.xml
+++ b/slf4j/pom.xml
@@ -116,6 +116,11 @@
         <plugins>
           <plugin>
             <artifactId>maven-invoker-plugin</artifactId>
+            <configuration>
+              <properties>
+                <slf4j.version>${slf4j.version}</slf4j.version>
+              </properties>
+            </configuration>
             <groupId>org.apache.maven.plugins</groupId>
           </plugin>
         </plugins>
