--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,4 +1,5 @@
-image: maven:3-openjdk-11
+default:
+  image: azul/zulu-openjdk:11
 
 cache:
   - key: maven-cache
@@ -18,10 +19,14 @@ variables:
   MAVEN_CLI_OPTS: >-
     -Dmaven.repo.local=$CI_PROJECT_DIR/.m2/repository
 
-build:
+build:compile:
   stage: build
   script:
     - ./mvnw $MAVEN_CLI_OPTS compile
+  rules:
+    - if: $CI_COMMIT_TAG
+    - if: $CI_PIPELINE_SOURCE == 'merge_request_event'
+    - if: $CI_PIPELINE_SOURCE == 'push'
 
 verify:development:
   stage: test
@@ -31,6 +36,8 @@ verify:development:
     - bash <(curl -Ls https://coverage.codacy.com/get.sh)
   rules:
     - if: $CI_COMMIT_BRANCH == $CI_DEFAULT_BRANCH
+      when: never
+    - if: $CI_PIPELINE_SOURCE == 'merge_request_event'
       when: never
     - when: always
   coverage: '/(\d+\.?\d*) \% covered/'
@@ -46,11 +53,15 @@ verify:development:
 verify:default:
   stage: test
   script:
-    - ./mvnw $MAVEN_CLI_OPTS clean verify
+    - ./mvnw $MAVEN_CLI_OPTS verify
     - awk -F"," '{ instructions += $4 + $5; covered += $5 } END { print covered, "/", instructions, "instructions covered"; print 100*covered/instructions, "% covered" }' `find . -name jacoco.csv -print`
     - bash <(curl -Ls https://coverage.codacy.com/get.sh)
+    - ./mvnw $MAVEN_CLI_OPTS verify -DskipTests -Prun-its
+    - ./mvnw license:check-file-header -Dlicense.failOnMissingHeader=true -Pprepare-and-check
   rules:
     - if: $CI_COMMIT_BRANCH == $CI_DEFAULT_BRANCH
+      when: always
+    - if: $CI_COMMIT_TAG
       when: always
     - when: never
   coverage: '/(\d+\.?\d*) \% covered/'
@@ -62,3 +73,28 @@ verify:default:
         path: '**/jacoco.xml'
       junit:
         - '**/TEST-io.github.vitalijr2.logging.mock.*.xml'
+
+verify:merge-request:
+  stage: test
+  script:
+    - ./mvnw $MAVEN_CLI_OPTS verify
+    - awk -F"," '{ instructions += $4 + $5; covered += $5 } END { print covered, "/", instructions, "instructions covered"; print 100*covered/instructions, "% covered" }' `find . -name jacoco.csv -print`
+    - bash <(curl -Ls https://coverage.codacy.com/get.sh)
+    - ./mvnw $MAVEN_CLI_OPTS verify -DskipTests -Prun-its
+    - ./mvnw license:check-file-header -Dlicense.failOnMissingHeader=true -Pprepare-and-check
+  rules:
+    - if: $CI_PIPELINE_SOURCE == 'merge_request_event'
+      when: always
+    - when: never
+  coverage: '/(\d+\.?\d*) \% covered/'
+  artifacts:
+    expire_in: 1 day
+
+deploy:publishing:
+  stage: deploy
+  script:
+    - ./mvnw -s .mvn/ci_settings.xml -DskipTests -Prelease
+  rules:
+    - if: $CI_COMMIT_TAG
+      when: always
+    - when: never
