--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -39,6 +39,8 @@ verify:development:
       when: never
     - if: $CI_PIPELINE_SOURCE == 'merge_request_event'
       when: never
+    - if: $CI_COMMIT_TAG
+      when: never
     - when: always
   coverage: '/(\d+\.?\d*) \% covered/'
   artifacts:
