--- a/pom.xml
+++ b/pom.xml
@@ -556,5 +556,5 @@
     <url>https://gitlab.com/vitalijr2/mock-loggers</url>
   </scm>
   <url>https://gitlab.com/vitalijr2/mock-loggers</url>
-  <version>1.2.5</version>
+  <version>1.3.0-SNAPSHOT</version>
 </project>
