Update module decriptions; use plugin versions in integration tests

--- a/commons-logging/pom.xml
+++ b/commons-logging/pom.xml
@@ -72,7 +72,7 @@
       <scope>provided</scope>
     </dependency>
   </dependencies>
-  <description>Mock loggers for Apache Commons Logging backed by Mockito.</description>
+  <description>A Mockito-based mock logger implementation for testing with Apache Commons Logging.</description>
   <modelVersion>4.0.0</modelVersion>
   <name>Mock loggers for Apache Commons Logging</name>
   <parent>
