--- a/jdk-platform-logging/src/it/hello-jdk-platform-logging-world/pom.xml
+++ b/jdk-platform-logging/src/it/hello-jdk-platform-logging-world/pom.xml
@@ -13,7 +13,7 @@
           <target>${java.version}</target>
         </configuration>
         <groupId>org.apache.maven.plugins</groupId>
-        <version>3.13.0</version>
+        <version>${compiler-plugin.version}</version>
       </plugin>
       <plugin>
         <artifactId>maven-dependency-plugin</artifactId>
@@ -25,7 +25,7 @@
           </execution>
         </executions>
         <groupId>org.apache.maven.plugins</groupId>
-        <version>3.8.1</version>
+        <version>${dependency-plugin.version}</version>
       </plugin>
       <plugin>
         <artifactId>maven-surefire-plugin</artifactId>
@@ -36,7 +36,7 @@
           </systemPropertyVariables>
         </configuration>
         <groupId>org.apache.maven.plugins</groupId>
-        <version>3.5.2</version>
+        <version>${surefire-plugin.version}</version>
       </plugin>
     </plugins>
   </build>
