--- a/slf4j/pom.xml
+++ b/slf4j/pom.xml
@@ -72,7 +72,7 @@
       <version>${slf4j.version}</version>
     </dependency>
   </dependencies>
-  <description>Mock loggers for Simple Logging Facade for Java backed by Mockito.</description>
+  <description>A Mockito-based mock logger implementation for testing with Simple Logging Facade for Java.</description>
   <modelVersion>4.0.0</modelVersion>
   <name>Mock loggers for SLF4J</name>
   <parent>
