--- a/tinylog-writer/pom.xml
+++ b/tinylog-writer/pom.xml
@@ -77,7 +77,7 @@
       <version>${tinylog.version}</version>
     </dependency>
   </dependencies>
-  <description>Mock writer for tinylog backed by Mockito.</description>
+  <description>A Mockito-based mock writer implementation for testing with tinylog.</description>
   <modelVersion>4.0.0</modelVersion>
   <name>Mock writer for tinylog</name>
   <parent>
