--- a/pom.xml
+++ b/pom.xml
@@ -573,5 +573,5 @@
     <url>https://gitlab.com/vitalijr2/mock-loggers</url>
   </scm>
   <url>https://gitlab.com/vitalijr2/mock-loggers</url>
-  <version>1.3.0-SNAPSHOT</version>
+  <version>1.3.0</version>
 </project>
