--- a/slf4j/pom.xml
+++ b/slf4j/pom.xml
@@ -59,7 +59,7 @@
     <dependency>
       <artifactId>mock-loggers-core</artifactId>
       <groupId>io.github.vitalijr2.logging</groupId>
-      <version>1.3.0-SNAPSHOT</version>
+      <version>1.3.0</version>
     </dependency>
     <dependency>
       <artifactId>mockito-core</artifactId>
@@ -78,7 +78,7 @@
   <parent>
     <artifactId>mock-loggers</artifactId>
     <groupId>io.github.vitalijr2.logging</groupId>
-    <version>1.3.0-SNAPSHOT</version>
+    <version>1.3.0</version>
   </parent>
   <profiles>
     <profile>
@@ -131,5 +131,5 @@
   <properties>
     <slf4j.version>2.0.17</slf4j.version>
   </properties>
-  <version>1.3.0-SNAPSHOT</version>
+  <version>1.3.0</version>
 </project>
