--- a/commons-logging/pom.xml
+++ b/commons-logging/pom.xml
@@ -64,7 +64,7 @@
     <dependency>
       <artifactId>mock-loggers-core</artifactId>
       <groupId>io.github.vitalijr2.logging</groupId>
-      <version>1.2.5</version>
+      <version>1.3.0</version>
     </dependency>
     <dependency>
       <artifactId>mockito-core</artifactId>
@@ -72,13 +72,13 @@
       <scope>provided</scope>
     </dependency>
   </dependencies>
-  <description>Mock loggers for Apache Commons Logging backed by Mockito.</description>
+  <description>A Mockito-based mock logger implementation for testing with Apache Commons Logging.</description>
   <modelVersion>4.0.0</modelVersion>
   <name>Mock loggers for Apache Commons Logging</name>
   <parent>
     <artifactId>mock-loggers</artifactId>
     <groupId>io.github.vitalijr2.logging</groupId>
-    <version>1.2.5</version>
+    <version>1.3.0</version>
   </parent>
   <profiles>
     <profile>
@@ -131,5 +131,5 @@
   <properties>
     <commons-logging.version>1.3.5</commons-logging.version>
   </properties>
-  <version>1.2.5</version>
+  <version>1.3.0</version>
 </project>
