--- a/jdk-platform-logging/pom.xml
+++ b/jdk-platform-logging/pom.xml
@@ -6,11 +6,28 @@
   <build>
     <plugins>
       <plugin>
-        <artifactId>maven-surefire-plugin</artifactId>
+        <artifactId>jacoco-maven-plugin</artifactId>
+        <groupId>org.jacoco</groupId>
+      </plugin>
+      <plugin>
+        <artifactId>maven-dependency-plugin</artifactId>
+        <executions>
+          <execution>
+            <goals>
+              <goal>properties</goal>
+            </goals>
+          </execution>
+        </executions>
         <groupId>org.apache.maven.plugins</groupId>
       </plugin>
       <plugin>
         <artifactId>maven-failsafe-plugin</artifactId>
+        <configuration>
+          <argLine>-javaagent:${org.mockito:mockito-core:jar}</argLine>
+          <systemPropertyVariables>
+            <java.util.logging.config.file>extension-logging.properties</java.util.logging.config.file>
+          </systemPropertyVariables>
+        </configuration>
         <groupId>org.apache.maven.plugins</groupId>
       </plugin>
       <plugin>
@@ -25,8 +42,14 @@
         <groupId>org.apache.maven.plugins</groupId>
       </plugin>
       <plugin>
-        <artifactId>jacoco-maven-plugin</artifactId>
-        <groupId>org.jacoco</groupId>
+        <artifactId>maven-surefire-plugin</artifactId>
+        <configuration>
+          <argLine>-javaagent:${org.mockito:mockito-core:jar}</argLine>
+          <systemPropertyVariables>
+            <java.util.logging.config.file>extension-logging.properties</java.util.logging.config.file>
+          </systemPropertyVariables>
+        </configuration>
+        <groupId>org.apache.maven.plugins</groupId>
       </plugin>
     </plugins>
   </build>
@@ -50,7 +73,7 @@
     <dependency>
       <artifactId>mock-loggers-core</artifactId>
       <groupId>io.github.vitalijr2.logging</groupId>
-      <version>1.2.5</version>
+      <version>1.3.0</version>
     </dependency>
     <dependency>
       <artifactId>mockito-core</artifactId>
@@ -58,13 +81,13 @@
       <scope>provided</scope>
     </dependency>
   </dependencies>
-  <description>Mock loggers for JDK Platform Logging backed by Mockito.</description>
+  <description>A Mockito-based mock logger implementation for testing with JDK Platform Logging.</description>
   <modelVersion>4.0.0</modelVersion>
   <name>Mock loggers for JDK Platform Logging</name>
   <parent>
     <artifactId>mock-loggers</artifactId>
     <groupId>io.github.vitalijr2.logging</groupId>
-    <version>1.2.5</version>
+    <version>1.3.0</version>
   </parent>
   <profiles>
     <profile>
@@ -93,5 +116,5 @@
       <id>run-its</id>
     </profile>
   </profiles>
-  <version>1.2.5</version>
+  <version>1.3.0</version>
 </project>
