--- a/pom.xml
+++ b/pom.xml
@@ -10,7 +10,7 @@
         <plugin>
           <artifactId>central-publishing-maven-plugin</artifactId>
           <groupId>org.sonatype.central</groupId>
-          <version>0.8.0</version>
+          <version>0.9.0</version>
         </plugin>
         <plugin>
           <artifactId>flatten-maven-plugin</artifactId>
@@ -34,7 +34,7 @@
             </execution>
           </executions>
           <groupId>org.codehaus.mojo</groupId>
-          <version>1.7.2</version>
+          <version>1.7.3</version>
         </plugin>
         <plugin>
           <artifactId>jacoco-maven-plugin</artifactId>
@@ -123,7 +123,12 @@
             <target>${java.version}</target>
           </configuration>
           <groupId>org.apache.maven.plugins</groupId>
-          <version>3.14.0</version>
+          <version>3.14.1</version>
+        </plugin>
+        <plugin>
+          <artifactId>maven-dependency-plugin</artifactId>
+          <groupId>org.apache.maven.plugins</groupId>
+          <version>3.9.0</version>
         </plugin>
         <plugin>
           <artifactId>maven-failsafe-plugin</artifactId>
@@ -146,7 +151,7 @@
             </execution>
           </executions>
           <groupId>org.apache.maven.plugins</groupId>
-          <version>3.5.3</version>
+          <version>3.5.4</version>
         </plugin>
         <plugin>
           <artifactId>maven-install-plugin</artifactId>
@@ -170,9 +175,12 @@
             </pomIncludes>
             <postBuildHookScript>verify</postBuildHookScript>
             <properties>
+              <compiler-plugin.version>${compiler-plugin.version}</compiler-plugin.version>
+              <dependency-plugin.version>${dependency-plugin.version}</dependency-plugin.version>
               <java.version>${java.version}</java.version>
               <junit.version>${junit.version}</junit.version>
               <mockito.version>${mockito.version}</mockito.version>
+              <surefire-plugin.version>${surefire-plugin.version}</surefire-plugin.version>
             </properties>
             <settingsFile>src/it/settings.xml</settingsFile>
           </configuration>
@@ -252,7 +260,7 @@
             </properties>
           </configuration>
           <groupId>org.apache.maven.plugins</groupId>
-          <version>3.5.3</version>
+          <version>${surefire-plugin.version}</version>
         </plugin>
         <plugin>
           <artifactId>semver-maven-plugin</artifactId>
@@ -307,8 +315,8 @@
     </plugins>
   </build>
   <ciManagement>
-    <system>GitHub Actions</system>
-    <url>https://github.com/vitalijr2/mock-loggers/actions</url>
+    <system>GitLab Pipelines</system>
+    <url>https://gitlab.com/vitalijr2/mock-loggers/-/pipelines</url>
   </ciManagement>
   <dependencyManagement>
     <dependencies>
@@ -316,7 +324,7 @@
         <artifactId>annotations</artifactId>
         <groupId>org.jetbrains</groupId>
         <scope>provided</scope>
-        <version>26.0.2</version>
+        <version>26.0.2-1</version>
       </dependency>
       <dependency>
         <artifactId>hamcrest</artifactId>
@@ -354,11 +362,17 @@
         <scope>test</scope>
         <version>${mockito.version}</version>
       </dependency>
+      <dependency>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-enforcer-plugin</artifactId>
+        <version>3.6.2</version>
+      </dependency>
     </dependencies>
   </dependencyManagement>
   <description>
-    Different logging services with mock loggers backed by Mockito.
-    Now this library implements JDK Platform Logging and Apache Commons Logging.
+    This library provides mock logger implementations, built on top of Mockito,
+    for testing logging services.
+    It includes support for commons-logging, elf4j, JDK logging, SLF4J, and tinylog.
   </description>
   <developers>
     <developer>
@@ -366,14 +380,14 @@
       <id>vitalijr2</id>
       <name>Vitalij Berdinskih</name>
       <timezone>Europe/Kyiv</timezone>
-      <url>https://github.com/vitalijr2</url>
+      <url>https://gitlab.com/vitalijr2</url>
     </developer>
   </developers>
   <groupId>io.github.vitalijr2.logging</groupId>
   <inceptionYear>2024</inceptionYear>
   <issueManagement>
-    <system>GitHub Issues</system>
-    <url>https://github.com/vitalijr2/mock-loggers/issues</url>
+    <system>GitLab Issues</system>
+    <url>https://gitlab.com/vitalijr2/mock-loggers/-/issues</url>
   </issueManagement>
   <licenses>
     <license>
@@ -437,7 +451,7 @@
                 </execution>
               </executions>
               <groupId>org.codehaus.mojo</groupId>
-              <version>2.6.0</version>
+              <version>2.7.0</version>
             </plugin>
           </plugins>
         </pluginManagement>
@@ -544,17 +558,20 @@
     </profile>
   </profiles>
   <properties>
+    <compiler-plugin.version>3.14.0</compiler-plugin.version>
+    <dependency-plugin.version>3.8.1</dependency-plugin.version>
     <java.version>11</java.version>
-    <javadoc-plugin.version>3.11.3</javadoc-plugin.version>
+    <javadoc-plugin.version>3.12.0</javadoc-plugin.version>
     <junit.version>5.13.4</junit.version>
-    <mockito.version>5.19.0</mockito.version>
+    <mockito.version>5.20.0</mockito.version>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+    <surefire-plugin.version>3.5.4</surefire-plugin.version>
   </properties>
   <scm>
-    <connection>scm:git:https://github.com/vitalijr2/mock-loggers.git</connection>
-    <developerConnection>scm:git:git@github.com:vitalijr2/mock-loggers.git</developerConnection>
-    <url>https://github.com/vitalijr2/mock-loggers</url>
+    <connection>scm:git:https://gitlab.com/vitalijr2/mock-loggers.git</connection>
+    <developerConnection>scm:git:git@gitlab.com:vitalijr2/mock-loggers.git</developerConnection>
+    <url>https://gitlab.com/vitalijr2/mock-loggers</url>
   </scm>
-  <url>https://github.com/vitalijr2/mock-loggers</url>
-  <version>1.2.5</version>
+  <url>https://gitlab.com/vitalijr2/mock-loggers</url>
+  <version>1.3.0</version>
 </project>
