--- a/tinylog-writer/pom.xml
+++ b/tinylog-writer/pom.xml
@@ -10,10 +10,6 @@
         <groupId>org.jacoco</groupId>
       </plugin>
       <plugin>
-        <artifactId>maven-surefire-plugin</artifactId>
-        <groupId>org.apache.maven.plugins</groupId>
-      </plugin>
-      <plugin>
         <artifactId>maven-failsafe-plugin</artifactId>
         <groupId>org.apache.maven.plugins</groupId>
       </plugin>
@@ -26,6 +22,10 @@
             </manifestEntries>
           </archive>
         </configuration>
+        <groupId>org.apache.maven.plugins</groupId>
+      </plugin>
+      <plugin>
+        <artifactId>maven-surefire-plugin</artifactId>
         <groupId>org.apache.maven.plugins</groupId>
       </plugin>
     </plugins>
@@ -55,7 +55,7 @@
     <dependency>
       <artifactId>mock-loggers-core</artifactId>
       <groupId>io.github.vitalijr2.logging</groupId>
-      <version>1.2.5</version>
+      <version>1.3.0</version>
     </dependency>
     <dependency>
       <artifactId>mockito-core</artifactId>
@@ -77,13 +77,13 @@
       <version>${tinylog.version}</version>
     </dependency>
   </dependencies>
-  <description>Mock writer for tinylog backed by Mockito.</description>
+  <description>A Mockito-based mock writer implementation for testing with tinylog.</description>
   <modelVersion>4.0.0</modelVersion>
   <name>Mock writer for tinylog</name>
   <parent>
     <artifactId>mock-loggers</artifactId>
     <groupId>io.github.vitalijr2.logging</groupId>
-    <version>1.2.5</version>
+    <version>1.3.0</version>
   </parent>
   <profiles>
     <profile>
@@ -136,5 +136,5 @@
   <properties>
     <tinylog.version>2.7.0</tinylog.version>
   </properties>
-  <version>1.2.5</version>
+  <version>1.3.0</version>
 </project>
