--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -22,7 +22,7 @@ variables:
 build:compile:
   stage: build
   script:
-    - ./mvnw $MAVEN_CLI_OPTS compile
+    - ./mvnw $MAVEN_CLI_OPTS clean compile
   rules:
     - if: $CI_COMMIT_TAG
     - if: $CI_PIPELINE_SOURCE == 'merge_request_event'
