--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,5 +1,5 @@
 default:
-  image: azul/zulu-openjdk:11
+  image: amazoncorretto:17
 
 cache:
   - key: maven-cache
@@ -22,7 +22,7 @@ variables:
 build:compile:
   stage: build
   script:
-    - ./mvnw $MAVEN_CLI_OPTS compile
+    - ./mvnw $MAVEN_CLI_OPTS clean compile
   rules:
     - if: $CI_COMMIT_TAG
     - if: $CI_PIPELINE_SOURCE == 'merge_request_event'
