--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -100,3 +100,9 @@ deploy:publishing:
     - if: $CI_COMMIT_TAG
       when: always
     - when: never
+
+sast:
+  stage: test
+
+include:
+  - template: Security/SAST.gitlab-ci.yml
