--- a/commons-logging/src/it/hello-commons-logging-world/pom.xml
+++ b/commons-logging/src/it/hello-commons-logging-world/pom.xml
@@ -45,7 +45,7 @@
       <version>3.0</version>
     </dependency>
     <dependency>
-      <artifactId>junit-jupiter-engine</artifactId>
+      <artifactId>junit-jupiter-api</artifactId>
       <groupId>org.junit.jupiter</groupId>
       <scope>test</scope>
       <version>${junit.version}</version>
