Fix plugin's version, dependencies, optimize the jUnit extension

--- a/pom.xml
+++ b/pom.xml
@@ -310,7 +310,7 @@
           </execution>
         </executions>
         <groupId>org.apache.maven.plugins</groupId>
-        <version>3.6.1</version>
+        <version>3.6.2</version>
       </plugin>
     </plugins>
   </build>
@@ -339,12 +339,6 @@
         <version>${junit.version}</version>
       </dependency>
       <dependency>
-        <artifactId>junit-jupiter-engine</artifactId>
-        <groupId>org.junit.jupiter</groupId>
-        <scope>test</scope>
-        <version>${junit.version}</version>
-      </dependency>
-      <dependency>
         <artifactId>junit-jupiter-params</artifactId>
         <groupId>org.junit.jupiter</groupId>
         <scope>test</scope>
@@ -361,11 +355,6 @@
         <groupId>org.mockito</groupId>
         <scope>test</scope>
         <version>${mockito.version}</version>
-      </dependency>
-      <dependency>
-        <groupId>org.apache.maven.plugins</groupId>
-        <artifactId>maven-enforcer-plugin</artifactId>
-        <version>3.6.2</version>
       </dependency>
     </dependencies>
   </dependencyManagement>
@@ -465,6 +454,9 @@
           </plugin>
         </plugins>
       </build>
+      <!--
+       Update third-party license, check a release
+      -->
       <id>prepare-and-check</id>
     </profile>
     <profile>
@@ -518,6 +510,9 @@
           </plugin>
         </plugins>
       </build>
+      <!--
+       Publish a release
+      -->
       <id>release</id>
     </profile>
     <profile>
@@ -554,6 +549,9 @@
           </plugin>
         </plugins>
       </build>
+      <!--
+       Run integration tests
+      -->
       <id>run-its</id>
     </profile>
   </profiles>
