--- a/elf4j/src/it/hello-elf4j-world/pom.xml
+++ b/elf4j/src/it/hello-elf4j-world/pom.xml
@@ -16,7 +16,22 @@
         <version>${compiler-plugin.version}</version>
       </plugin>
       <plugin>
+        <artifactId>maven-dependency-plugin</artifactId>
+        <executions>
+          <execution>
+            <goals>
+              <goal>properties</goal>
+            </goals>
+          </execution>
+        </executions>
+        <groupId>org.apache.maven.plugins</groupId>
+        <version>${dependency-plugin.version}</version>
+      </plugin>
+      <plugin>
         <artifactId>maven-surefire-plugin</artifactId>
+        <configuration>
+          <argLine>-javaagent:${org.mockito:mockito-core:jar}</argLine>
+        </configuration>
         <groupId>org.apache.maven.plugins</groupId>
         <version>${surefire-plugin.version}</version>
       </plugin>
