--- a/jdk-platform-logging/pom.xml
+++ b/jdk-platform-logging/pom.xml
@@ -11,23 +11,10 @@
       </plugin>
       <plugin>
         <artifactId>maven-dependency-plugin</artifactId>
-        <executions>
-          <execution>
-            <goals>
-              <goal>properties</goal>
-            </goals>
-          </execution>
-        </executions>
         <groupId>org.apache.maven.plugins</groupId>
       </plugin>
       <plugin>
         <artifactId>maven-failsafe-plugin</artifactId>
-        <configuration>
-          <argLine>-javaagent:${org.mockito:mockito-core:jar}</argLine>
-          <systemPropertyVariables>
-            <java.util.logging.config.file>extension-logging.properties</java.util.logging.config.file>
-          </systemPropertyVariables>
-        </configuration>
         <groupId>org.apache.maven.plugins</groupId>
       </plugin>
       <plugin>
@@ -43,12 +30,6 @@
       </plugin>
       <plugin>
         <artifactId>maven-surefire-plugin</artifactId>
-        <configuration>
-          <argLine>-javaagent:${org.mockito:mockito-core:jar}</argLine>
-          <systemPropertyVariables>
-            <java.util.logging.config.file>extension-logging.properties</java.util.logging.config.file>
-          </systemPropertyVariables>
-        </configuration>
         <groupId>org.apache.maven.plugins</groupId>
       </plugin>
     </plugins>
@@ -63,7 +44,7 @@
       <groupId>org.hamcrest</groupId>
     </dependency>
     <dependency>
-      <artifactId>junit-jupiter-engine</artifactId>
+      <artifactId>junit-jupiter-api</artifactId>
       <groupId>org.junit.jupiter</groupId>
     </dependency>
     <dependency>
@@ -73,7 +54,7 @@
     <dependency>
       <artifactId>mock-loggers-core</artifactId>
       <groupId>io.github.vitalijr2.logging</groupId>
-      <version>2.0.0</version>
+      <version>2.0.1</version>
     </dependency>
     <dependency>
       <artifactId>mockito-core</artifactId>
@@ -87,7 +68,7 @@
   <parent>
     <artifactId>mock-loggers</artifactId>
     <groupId>io.github.vitalijr2.logging</groupId>
-    <version>2.0.0</version>
+    <version>2.0.1</version>
   </parent>
   <profiles>
     <profile>
@@ -116,5 +97,5 @@
       <id>run-its</id>
     </profile>
   </profiles>
-  <version>2.0.0</version>
+  <version>2.0.1</version>
 </project>
