--- a/core/pom.xml
+++ b/core/pom.xml
@@ -10,6 +10,10 @@
         <groupId>org.jacoco</groupId>
       </plugin>
       <plugin>
+        <artifactId>maven-dependency-plugin</artifactId>
+        <groupId>org.apache.maven.plugins</groupId>
+      </plugin>
+      <plugin>
         <artifactId>maven-failsafe-plugin</artifactId>
         <groupId>org.apache.maven.plugins</groupId>
       </plugin>
@@ -45,10 +49,6 @@
       <scope>provided</scope>
     </dependency>
     <dependency>
-      <artifactId>junit-jupiter-engine</artifactId>
-      <groupId>org.junit.jupiter</groupId>
-    </dependency>
-    <dependency>
       <artifactId>mockito-core</artifactId>
       <groupId>org.mockito</groupId>
     </dependency>
@@ -66,7 +66,7 @@
   <parent>
     <artifactId>mock-loggers</artifactId>
     <groupId>io.github.vitalijr2.logging</groupId>
-    <version>2.0.0</version>
+    <version>2.0.1</version>
   </parent>
   <profiles>
     <profile>
@@ -84,5 +84,5 @@
       <id>prepare-and-check</id>
     </profile>
   </profiles>
-  <version>2.0.0</version>
+  <version>2.0.1</version>
 </project>
