--- a/pom.xml
+++ b/pom.xml
@@ -127,12 +127,20 @@
         </plugin>
         <plugin>
           <artifactId>maven-dependency-plugin</artifactId>
+          <executions>
+            <execution>
+              <goals>
+                <goal>properties</goal>
+              </goals>
+            </execution>
+          </executions>
           <groupId>org.apache.maven.plugins</groupId>
           <version>3.9.0</version>
         </plugin>
         <plugin>
           <artifactId>maven-failsafe-plugin</artifactId>
           <configuration>
+            <argLine>@{argLine} -javaagent:${org.mockito:mockito-core:jar}</argLine>
             <forkCount>1</forkCount>
             <includes>
               <include>**/*Test.java</include>
@@ -207,7 +215,7 @@
             </archive>
           </configuration>
           <groupId>org.apache.maven.plugins</groupId>
-          <version>3.4.2</version>
+          <version>3.5.0</version>
         </plugin>
         <plugin>
           <artifactId>maven-javadoc-plugin</artifactId>
@@ -255,6 +263,7 @@
         <plugin>
           <artifactId>maven-surefire-plugin</artifactId>
           <configuration>
+            <argLine>@{argLine} -javaagent:${org.mockito:mockito-core:jar}</argLine>
             <properties>
               <groups>fast</groups>
             </properties>
@@ -310,7 +319,7 @@
           </execution>
         </executions>
         <groupId>org.apache.maven.plugins</groupId>
-        <version>3.6.1</version>
+        <version>3.6.2</version>
       </plugin>
     </plugins>
   </build>
@@ -339,12 +348,6 @@
         <version>${junit.version}</version>
       </dependency>
       <dependency>
-        <artifactId>junit-jupiter-engine</artifactId>
-        <groupId>org.junit.jupiter</groupId>
-        <scope>test</scope>
-        <version>${junit.version}</version>
-      </dependency>
-      <dependency>
         <artifactId>junit-jupiter-params</artifactId>
         <groupId>org.junit.jupiter</groupId>
         <scope>test</scope>
@@ -361,11 +364,6 @@
         <groupId>org.mockito</groupId>
         <scope>test</scope>
         <version>${mockito.version}</version>
-      </dependency>
-      <dependency>
-        <groupId>org.apache.maven.plugins</groupId>
-        <artifactId>maven-enforcer-plugin</artifactId>
-        <version>3.6.2</version>
       </dependency>
     </dependencies>
   </dependencyManagement>
@@ -465,6 +463,9 @@
           </plugin>
         </plugins>
       </build>
+      <!--
+       Update third-party license, check a release
+      -->
       <id>prepare-and-check</id>
     </profile>
     <profile>
@@ -518,6 +519,9 @@
           </plugin>
         </plugins>
       </build>
+      <!--
+       Publish a release
+      -->
       <id>release</id>
     </profile>
     <profile>
@@ -554,6 +558,9 @@
           </plugin>
         </plugins>
       </build>
+      <!--
+       Run integration tests
+      -->
       <id>run-its</id>
     </profile>
   </profiles>
@@ -562,7 +569,7 @@
     <dependency-plugin.version>3.8.1</dependency-plugin.version>
     <java.version>17</java.version>
     <javadoc-plugin.version>3.12.0</javadoc-plugin.version>
-    <junit.version>6.0.0</junit.version>
+    <junit.version>6.0.1</junit.version>
     <mockito.version>5.20.0</mockito.version>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <surefire-plugin.version>3.5.4</surefire-plugin.version>
@@ -573,5 +580,5 @@
     <url>https://gitlab.com/vitalijr2/mock-loggers</url>
   </scm>
   <url>https://gitlab.com/vitalijr2/mock-loggers</url>
-  <version>2.0.0</version>
+  <version>2.0.1</version>
 </project>
