--- a/slf4j/pom.xml
+++ b/slf4j/pom.xml
@@ -10,6 +10,10 @@
         <groupId>org.jacoco</groupId>
       </plugin>
       <plugin>
+        <artifactId>maven-dependency-plugin</artifactId>
+        <groupId>org.apache.maven.plugins</groupId>
+      </plugin>
+      <plugin>
         <artifactId>maven-failsafe-plugin</artifactId>
         <groupId>org.apache.maven.plugins</groupId>
       </plugin>
@@ -40,7 +44,7 @@
       <groupId>org.hamcrest</groupId>
     </dependency>
     <dependency>
-      <artifactId>junit-jupiter-engine</artifactId>
+      <artifactId>junit-jupiter-api</artifactId>
       <groupId>org.junit.jupiter</groupId>
     </dependency>
     <dependency>
@@ -50,7 +54,7 @@
     <dependency>
       <artifactId>mock-loggers-core</artifactId>
       <groupId>io.github.vitalijr2.logging</groupId>
-      <version>2.0.0</version>
+      <version>2.0.1</version>
     </dependency>
     <dependency>
       <artifactId>mockito-core</artifactId>
@@ -69,7 +73,7 @@
   <parent>
     <artifactId>mock-loggers</artifactId>
     <groupId>io.github.vitalijr2.logging</groupId>
-    <version>2.0.0</version>
+    <version>2.0.1</version>
   </parent>
   <profiles>
     <profile>
@@ -122,5 +126,5 @@
   <properties>
     <slf4j.version>2.0.17</slf4j.version>
   </properties>
-  <version>2.0.0</version>
+  <version>2.0.1</version>
 </project>
