--- a/tinylog-provider/pom.xml
+++ b/tinylog-provider/pom.xml
@@ -10,6 +10,10 @@
         <groupId>org.jacoco</groupId>
       </plugin>
       <plugin>
+        <artifactId>maven-dependency-plugin</artifactId>
+        <groupId>org.apache.maven.plugins</groupId>
+      </plugin>
+      <plugin>
         <artifactId>maven-failsafe-plugin</artifactId>
         <groupId>org.apache.maven.plugins</groupId>
       </plugin>
@@ -45,17 +49,13 @@
       <scope>provided</scope>
     </dependency>
     <dependency>
-      <artifactId>junit-jupiter-engine</artifactId>
-      <groupId>org.junit.jupiter</groupId>
-    </dependency>
-    <dependency>
       <artifactId>junit-jupiter-params</artifactId>
       <groupId>org.junit.jupiter</groupId>
     </dependency>
     <dependency>
       <artifactId>mock-loggers-core</artifactId>
       <groupId>io.github.vitalijr2.logging</groupId>
-      <version>2.0.0</version>
+      <version>2.0.1</version>
     </dependency>
     <dependency>
       <artifactId>mockito-core</artifactId>
@@ -78,7 +78,7 @@
   <parent>
     <artifactId>mock-loggers</artifactId>
     <groupId>io.github.vitalijr2.logging</groupId>
-    <version>2.0.0</version>
+    <version>2.0.1</version>
   </parent>
   <profiles>
     <profile>
@@ -131,5 +131,5 @@
   <properties>
     <tinylog.version>2.7.0</tinylog.version>
   </properties>
-  <version>2.0.0</version>
+  <version>2.0.1</version>
 </project>
