--- a/tinylog-provider/src/it/hello-custom-tinylog-world/pom.xml
+++ b/tinylog-provider/src/it/hello-custom-tinylog-world/pom.xml
@@ -16,11 +16,21 @@
         <version>${compiler-plugin.version}</version>
       </plugin>
       <plugin>
+        <artifactId>maven-dependency-plugin</artifactId>
+        <executions>
+          <execution>
+            <goals>
+              <goal>properties</goal>
+            </goals>
+          </execution>
+        </executions>
+        <groupId>org.apache.maven.plugins</groupId>
+        <version>${dependency-plugin.version}</version>
+      </plugin>
+      <plugin>
         <artifactId>maven-surefire-plugin</artifactId>
         <configuration>
-          <systemPropertyVariables>
-            <java.util.logging.config.file>extension-logging.properties</java.util.logging.config.file>
-          </systemPropertyVariables>
+          <argLine>-javaagent:${org.mockito:mockito-core:jar}</argLine>
         </configuration>
         <groupId>org.apache.maven.plugins</groupId>
         <version>${surefire-plugin.version}</version>
@@ -40,7 +50,7 @@
       <version>3.0</version>
     </dependency>
     <dependency>
-      <artifactId>junit-jupiter-engine</artifactId>
+      <artifactId>junit-jupiter-api</artifactId>
       <groupId>org.junit.jupiter</groupId>
       <scope>test</scope>
       <version>${junit.version}</version>
